; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_pathspec.c_git_pathspec_match_workdir.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_pathspec.c_git_pathspec_match_workdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@GIT_ITERATOR_OPTIONS_INIT = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_pathspec_match_workdir(i32** %0, i32* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.TYPE_4__, align 4
  %11 = alloca i32, align 4
  store i32** %0, i32*** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %12 = bitcast %struct.TYPE_4__* %10 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %12, i8* align 4 bitcast (%struct.TYPE_4__* @GIT_ITERATOR_OPTIONS_INIT to i8*), i64 4, i1 false)
  store i32 0, i32* %11, align 4
  %13 = load i32*, i32** %6, align 8
  %14 = call i32 @assert(i32* %13)
  %15 = load i32, i32* %7, align 4
  %16 = call i32 @pathspec_match_iter_flags(i32 %15)
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  store i32 %16, i32* %17, align 4
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @git_iterator_for_workdir(i32** %9, i32* %18, i32* null, i32* null, %struct.TYPE_4__* %10)
  store i32 %19, i32* %11, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %29, label %21

21:                                               ; preds = %4
  %22 = load i32**, i32*** %5, align 8
  %23 = load i32*, i32** %9, align 8
  %24 = load i32, i32* %7, align 4
  %25 = load i32*, i32** %8, align 8
  %26 = call i32 @pathspec_match_from_iterator(i32** %22, i32* %23, i32 %24, i32* %25)
  store i32 %26, i32* %11, align 4
  %27 = load i32*, i32** %9, align 8
  %28 = call i32 @git_iterator_free(i32* %27)
  br label %29

29:                                               ; preds = %21, %4
  %30 = load i32, i32* %11, align 4
  ret i32 %30
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @assert(i32*) #2

declare dso_local i32 @pathspec_match_iter_flags(i32) #2

declare dso_local i32 @git_iterator_for_workdir(i32**, i32*, i32*, i32*, %struct.TYPE_4__*) #2

declare dso_local i32 @pathspec_match_from_iterator(i32**, i32*, i32, i32*) #2

declare dso_local i32 @git_iterator_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
